# expense-tracker

./: .gitignore  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
dev/: 404.html  index.html  sitemap.xml
dev/categorization/: index.html
dev/getting-started/: index.html
dev/installation/: index.html
docs/: categorization.md  getting-started.md  index.md  installation.md
expense_tracker/: app.py  version.py
expense_tracker/core/: merchant_repository.py  repositories.py  repository.py  transaction_repository.py
expense_tracker/gui/: main_window.py
expense_tracker/gui/dialogs/: add_expense.py  edit_expense.py  expense_form.py  upload.py
expense_tracker/gui/tabs/: heatmap_tab.py  statistics_tab.py  transactions_tab.py
expense_tracker/services/: marchant.py  merchant.py  statistics.py  transaction.py
expense_tracker/utils/: date.py  extract.py  merchant.py
openspec/changes/archive/2025-12-02-fix-database-location-for-package-install/: tasks.md
tests/core/: test_model.py  test_repository.py
tests/services/: test_merchant.py  test_statistics.py  test_transaction.py
tests/utils/: test_extract.py  test_merchant.py  test_merchat.py
v0.2.0/: 404.html  index.html  sitemap.xml
v0.2.0/categorization/: index.html
v0.2.0/getting-started/: index.html
v0.2.0/installation/: index.html
v0.2.0/search/: search_index.json
v0.2.1/: 404.html  index.html  sitemap.xml
v0.2.1/categorization/: index.html
v0.2.1/getting-started/: index.html
v0.2.1/installation/: index.html
