[project]
name = "expense-tracker"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "pdfplumber>=0.11.7",
    "ttkbootstrap>=1.18.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.4",
]

[tool.setuptools.dynamic]
version = {attr = "expense_tracker.version.__version__"}